--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
 # Compiled class file
 *.class
+# Eclipse
+.settings/
+*.project
+*.classpath
+.prefs
+*.prefs
+.metadata/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+out/
+
+# VSCode
+.vscode/
+
+# Mac
+.DS_Store
+
+# Maven
+log/*
+target/
+
+# Gradle
+.gradle/
 
 # Log file
 *.log
