--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <!-- plugins -->
         <thin.version>1.0.22.RELEASE</thin.version>
         <spring-boot.version>2.4.0</spring-boot.version>
+		<spring.security.version>4.1.4.RELEASE</spring.security.version>
         <aspectjweaver.version>1.9.1</aspectjweaver.version>
         <mockito.version>3.4.0</mockito.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -36,6 +37,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+            <version>${spring-boot.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
