--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>2.4.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.0.4.RELEASE</version>
+		</dependency>
+
 
         <dependency>
             <groupId>org.mockito</groupId>
